name:                reflex-server-wai
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Server.Wai
  build-depends:       base >=4.9 && <4.10
                     , mtl
                     , stm
                     , wai
                     , reflex
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , stm
                     , wai
                     , reflex
                     , reflex-basic-host
                     , http-types
                     , bytestring
                     , warp
                     , reflex-server-wai
  hs-source-dirs:      exe
  default-language:    Haskell2010
  
