name:                reflex-server-wai
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Server.Wai
  build-depends:       base       >=4.9 && <4.12
                     , containers >= 0.5 && < 0.6
                     , mtl        >= 2.2.1 && < 2.3
                     , reflex     >= 0.5 && < 0.6
                     , stm        >= 2.4.4 && < 2.5
                     , wai        >= 3.2.1 && < 3.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.12
                     , bytestring        >= 0.10.8 && < 0.11
                     , http-types        >= 0.9.1 && < 0.13
                     , reflex            >= 0.5 && < 0.6
                     , reflex-basic-host >= 0.1.0 && < 0.2
                     , stm               >= 2.4.4 && < 2.5
                     , wai               >= 3.2.1 && < 3.3
                     , warp              >= 3.2.13 && < 3.3
                     , reflex-server-wai
  hs-source-dirs:      exe
  ghc-options:         -Wall
  default-language:    Haskell2010
  
